fixed layout issues

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -116,7 +116,7 @@ a {
   color: $text-color;
   text-decoration: underline;
   text-decoration-color: $link-base-color;
-  text-decoration-thickness: 3px;
+  text-decoration-thickness: 2px;
   &:hover {
     text-decoration: none;;
     opacity: 1;
