--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -18,8 +18,8 @@
   letter-spacing: -1px;
   float: right;
   font-size: 25px;
-  bottom: 18px;
-  
+  bottom: 8px;
+
   a {
     color: $site-title-color;
   }
@@ -34,7 +34,7 @@
   background-color: inherit;
   position: relative;
   top: 38px;
-  
+ 
   .nav-trigger {
     display: none;
   }
